Revision history for {{$dist->name}}

{{$NEXT}}
          - bump optional dependency on [MakeMaker::Awesome] to avoid old bug
            with loaded modules

0.075     2014-10-12 01:02:55Z
          - fix tests that died when run outside a git repository

0.074     2014-10-12 00:01:59Z
          - refer to "the maintainer(s)", rather than "me", in generated
            CONTRIBUTING file
          - use new build_warnings option in [Git::Check]

0.073     2014-09-06 02:07:00Z
          - fixed a few small omissions in the minting profile for new
            Dist::Zilla plugin distributions
          - no longer performing side effects for plugins that are -remove'd
            in the final configuration
          - added [AuthorityFromModule] (twinned for now with [Authority],
            until supported is added in PAUSE)
          - bump prereq on [ModuleBuildTiny::Fallback], to get fixes for
            interaction with [CheckBin], [CheckLib]

0.072     2014-08-20 04:33:59Z
          - fix syntax that parses badly on all perls before 5.21.1 - hey
            that's new enough for everyone, right?

0.071     2014-08-19 01:11:20Z
          - fix test that broke when I released version 0.09 of
            Dist::Zilla::Plugin::Test::NoTabs
          - remove prereq declaration for plugin that is only actually ever
            used for ether herself
          - now adding all plugins pulled in by the plugin bundle to the built
            distribution's develop prereqs (to add to the plugins outside the
            bundle, that were already being added by [Prereqs::AuthorDeps])

0.070     2014-08-16 18:48:19Z
          - revert git contributor change from v0.069; opened
            (github) CPAN-API/metacpan-web#1270 instead.
          - order contributors by number of commits, descending
          - no longer adding an $AUTHORITY variable to modules, as nothing
            (save Class::MOP, Moose and Moo) has ever used it - this also