@@ -3,6 +3,9 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
           - bump optional dependency on [MakeMaker::Awesome] to avoid old bug
             with loaded modules
+          - copy_file_from_release option now appends to, rather than
+            overshadowing, the defaults, so users do not need to repeat the
+            defaults (which may change over time)
 
 0.075     2014-10-12 01:02:55Z
           - fix tests that died when run outside a git repository
